syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package orders;

service Orders {
    rpc FindOneByOrderId(OrderIdRequest) returns (OrderResponse) {};
    rpc FindOneByUserId(OrderIdRequest) returns (OrderResponse) {}
    //                  ^^^^^^^^^^^^^^  ?
    rpc FindAll(Empty) returns (FindAllOrderResponse) {};
    rpc Create(CreateOrderRequest) returns (OrderResponse) {};
    rpc Update(UpdateOrderResquest) returns (OrderResponse) {};
    rpc Delete(OrderIdRequest) returns (OrderResponse) {};
}

message OrderIdRequest {
    int64 id = 1;
}

message CreateOrderRequest {
    int64 user_id = 1;
    int64 price = 2;
}

message UpdateOrderResquest {
    int64 order_id = 1;
    int64 user_id = 2;
    int64 price = 3;
}

message OrderResponse {
    int64 order_id = 1;
    int64 user_id = 2;
    int64 price = 3;
    int64 status = 4;
    Timestamp createdAt = 5;
    Timestamp updatedAt = 6;
}

message FindAllOrderResponse {
    repeated OrderResponse results = 1 [packed = true];
}